--- a/master_thesis/sections/related_work.tex
+++ b/master_thesis/sections/related_work.tex
@@ -236,6 +236,7 @@ capacity of the black edges in the flow network is $\infty$.}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Max-Flow-Min-Cut Based Local Search on Graphs}
+\label{sec:flow_local_search_graph}
 
 It seems naturals to utilize maximum flow computations to improve a 
 partition of a graph. Lang and Rao \cite{lang2004flow} uses an approach,
