add flow network max flow experiments

--- a/macros.tex
+++ b/macros.tex
@@ -24,6 +24,18 @@
 \newcommand{\DFS}{\emph{DFS}}
 \newcommand{\BFS}{\emph{BFS}}
 
+\newcommand{\GoldbergTarjan}{\sc{GoldbergTarjan}}
+\newcommand{\EdmondKarp}{\sc{EdmondKarp}}
+
+%Benchmark Instances
+\newcommand{\ALL}{\sc All}
+\newcommand{\Dual}{\sc Dual}
+\newcommand{\Primal}{\sc Primal}
+\newcommand{\ISPD}{\sc Ispd98}
+\newcommand{\Literal}{\sc{Literal}}
+\newcommand{\SPM}{\sc Spm}
+\newcommand{\DAC}{\sc Dac}
+
 \newcounter{todocount}
 \setcounter{todocount}{1}
 \newcommand{\todo}[1]{{\color{red}\textbf{TODO \the\value{todocount}:}
