--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -27,7 +27,7 @@
 
 % Unterstützung für Sätze und Definitionen
 \usepackage{amsthm}
-
+\usepackage{booktabs}
 
 \newtheorem{Satz}{Satz}[section]
 \newtheorem{Definition}[Satz]{Definition}
@@ -295,6 +295,8 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experimental Results}
+
+\input{sections/experiments}
 
 \newpage
 
