--- a/macros.tex
+++ b/macros.tex
@@ -24,8 +24,8 @@
 \newcommand{\DFS}{\emph{DFS}}
 \newcommand{\BFS}{\emph{BFS}}
 
-\newcommand{\GoldbergTarjan}{\sc{GoldbergTarjan}}
-\newcommand{\EdmondKarp}{\sc{EdmondKarp}}
+\newcommand{\GoldbergTarjan}{\textsc{GoldbergTarjan}}
+\newcommand{\EdmondKarp}{\textsc{EdmondKarp}}
 
 %Benchmark Instances
 \newcommand{\ALL}{\sc All}
@@ -35,6 +35,15 @@
 \newcommand{\Literal}{\sc{Literal}}
 \newcommand{\SPM}{\sc Spm}
 \newcommand{\DAC}{\sc Dac}
+
+%Experiment Flow Networks
+\newcommand{\ExpLawler}{T_L}
+\newcommand{\ExpNodeDegree}{T_H}
+\newcommand{\ExpEdgeSize}{T_G}
+\newcommand{\ExpHybrid}{T_{\text{Hybrid}}}
+
+%Flow Variants
+\newcommand{\FlowVariant}[4]{$(#1\text{Flow},#2\text{CHE},#3\text{MBMC},#4\text{FM})$}
 
 \newcounter{todocount}
 \setcounter{todocount}{1}
