--- a/master_thesis/experiments/flow_network_max_flow_table.tex
+++ b/master_thesis/experiments/flow_network_max_flow_table.tex
@@ -1,41 +1,41 @@
-\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $0.9$ & $+2.67$ & $+24.51$ & $+29.22$ & $\mathbf{-23.93}$ & $-22.61$ & $-5.28$ & $-9.74$ \\ 
- & $1000$ & $1.92$ & $+3.88$ & $+25.69$ & $+32.6$ & $\mathbf{-11.2}$ & $-9.21$ & $+14.41$ & $+11.16$ \\ 
- & $5000$ & $\mathbf{12.49}$ & $+8.9$ & $+31.02$ & $+44.94$ & $+35.56$ & $+44.92$ & $+90.17$ & $+104.23$ \\ 
- & $10000$ & $\mathbf{28.08}$ & $+13.62$ & $+38.86$ & $+58.01$ & $+58.66$ & $+74.9$ & $+120.39$ & $+147.64$ \\ 
- & $25000$ & $\mathbf{62.3}$ & $+25.14$ & $+56.13$ & $+94.89$ & $+61.6$ & $+90.05$ & $+117.76$ & $+161.2$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $0.91$ & $+2.24$ & $+24.93$ & $+29.35$ & $\mathbf{-25.39}$ & $-24.3$ & $-6.68$ & $-11.53$ \\ 
+ & $1000$ & $1.95$ & $+3.65$ & $+26.19$ & $+32.95$ & $\mathbf{-13.99}$ & $-12.36$ & $+10.81$ & $+7.51$ \\ 
+ & $5000$ & $\mathbf{13.71}$ & $+8.63$ & $+29.39$ & $+43.11$ & $+27.03$ & $+35.33$ & $+73.97$ & $+86.31$ \\ 
+ & $10000$ & $\mathbf{30.54}$ & $+12.57$ & $+36.15$ & $+54.62$ & $+47.93$ & $+61.72$ & $+100.41$ & $+123.31$ \\ 
+ & $25000$ & $\mathbf{67.96}$ & $+23.36$ & $+52.12$ & $+87.8$ & $+53.25$ & $+77.85$ & $+100.95$ & $+138.8$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $0.33$ & $+0.43$ & $+30.32$ & $+36.21$ & $-37.35$ & $\mathbf{-37.72}$ & $-23.13$ & $-27.22$ \\ 
- & $1000$ & $0.8$ & $-1.24$ & $+41.97$ & $+49.21$ & $-38.89$ & $\mathbf{-40.89}$ & $-19.94$ & $-21.83$ \\ 
- & $5000$ & $5.2$ & $+4.35$ & $+46.26$ & $+58.3$ & $\mathbf{-20.99}$ & $-19.73$ & $+12.46$ & $+19.92$ \\ 
- & $10000$ & $10.67$ & $+3.35$ & $+48.99$ & $+66.57$ & $\mathbf{-10.13}$ & $-6.86$ & $+45.95$ & $+60.98$ \\ 
- & $25000$ & $31.41$ & $+26.92$ & $+186.11$ & $+254.8$ & $\mathbf{-23.42}$ & $-17.12$ & $+25.15$ & $+47.38$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $0.34$ & $-0.36$ & $+30.14$ & $+34.98$ & $-37.61$ & $\mathbf{-38.08}$ & $-23.12$ & $-26.56$ \\ 
+ & $1000$ & $0.8$ & $-1.7$ & $+41.18$ & $+47.43$ & $-38.94$ & $\mathbf{-41.19}$ & $-20.88$ & $-22.17$ \\ 
+ & $5000$ & $5.2$ & $+4.11$ & $+46.02$ & $+58.5$ & $\mathbf{-21.35}$ & $-19.79$ & $+12.55$ & $+19.6$ \\ 
+ & $10000$ & $10.67$ & $+3.2$ & $+48.92$ & $+66.83$ & $\mathbf{-9.41}$ & $-6.44$ & $+46.23$ & $+63$ \\ 
+ & $25000$ & $31.43$ & $+26.81$ & $+186.2$ & $+255.32$ & $\mathbf{-23.53}$ & $-17.16$ & $+25.16$ & $+47.29$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $0.48$ & $-1.01$ & $+26.65$ & $+29.08$ & $-34.09$ & $\mathbf{-34.74}$ & $-19.05$ & $-20.24$ \\ 
- & $1000$ & $1.12$ & $-0.62$ & $+32.57$ & $+37.86$ & $-30.19$ & $\mathbf{-31.85}$ & $-12.05$ & $-12.48$ \\ 
- & $5000$ & $7.06$ & $+6.69$ & $+35.21$ & $+49.2$ & $\mathbf{-1.8}$ & $+2.21$ & $+31.4$ & $+42.79$ \\ 
- & $10000$ & $\mathbf{16.35}$ & $+10.97$ & $+42.57$ & $+64.75$ & $+18.13$ & $+26.47$ & $+75.52$ & $+96.08$ \\ 
- & $25000$ & $\mathbf{74.94}$ & $+26.59$ & $+73.59$ & $+132.04$ & $+38.03$ & $+56.8$ & $+85.42$ & $+124.06$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $0.48$ & $-0.58$ & $+26.23$ & $+28.54$ & $-33.85$ & $\mathbf{-34.5}$ & $-19.55$ & $-20.14$ \\ 
+ & $1000$ & $1.11$ & $-0.8$ & $+32.35$ & $+37.47$ & $-29.32$ & $\mathbf{-31.59}$ & $-11.91$ & $-11.88$ \\ 
+ & $5000$ & $7.06$ & $+6.65$ & $+35.1$ & $+49.35$ & $\mathbf{-1.67}$ & $+1.64$ & $+31.03$ & $+41.91$ \\ 
+ & $10000$ & $\mathbf{16.33}$ & $+10.97$ & $+42.54$ & $+64.68$ & $+18.38$ & $+25.84$ & $+75.19$ & $+95.09$ \\ 
+ & $25000$ & $\mathbf{75.01}$ & $+26.26$ & $+73.85$ & $+132.06$ & $+37.85$ & $+56.79$ & $+85.28$ & $+124.01$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $0.25$ & $+16.79$ & $+1.16$ & $+17.3$ & $\mathbf{-41.76}$ & $-33.9$ & $-40.61$ & $-37.5$ \\ 
- & $1000$ & $0.49$ & $+20.78$ & $+0.87$ & $+21.58$ & $\mathbf{-43.94}$ & $-36.98$ & $-42.87$ & $-38.95$ \\ 
- & $5000$ & $2.73$ & $+46.92$ & $+0.19$ & $+47.31$ & $\mathbf{-42.97}$ & $-23.81$ & $-42.37$ & $-24.35$ \\ 
- & $10000$ & $4.89$ & $+71.11$ & $+1.37$ & $+70.88$ & $\mathbf{-35.14}$ & $-2.48$ & $-34.45$ & $-3.17$ \\ 
- & $25000$ & $12.92$ & $+137.18$ & $+2.96$ & $+136.28$ & $\mathbf{-33.15}$ & $+31.84$ & $-32.29$ & $+31.56$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $0.3$ & $+12.37$ & $+0.99$ & $+13.6$ & $\mathbf{-40.36}$ & $-34.35$ & $-39.13$ & $-37.67$ \\ 
+ & $1000$ & $0.6$ & $+16.87$ & $+0.83$ & $+18.38$ & $\mathbf{-40.93}$ & $-35.35$ & $-39.47$ & $-37.18$ \\ 
+ & $5000$ & $3.2$ & $+37.54$ & $+0.21$ & $+37.78$ & $\mathbf{-39.66}$ & $-23.77$ & $-39.17$ & $-24.01$ \\ 
+ & $10000$ & $5.78$ & $+55.72$ & $+1.21$ & $+55.86$ & $\mathbf{-34.01}$ & $-7.81$ & $-33.3$ & $-8$ \\ 
+ & $25000$ & $14.71$ & $+105.19$ & $+2.15$ & $+105.88$ & $\mathbf{-33.35}$ & $+17.43$ & $-32.59$ & $+17.28$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $2.02$ & $\mathbf{-1.06}$ & $+78.17$ & $+78.93$ & $+13.41$ & $+12.57$ & $+109.94$ & $+91.65$ \\ 
- & $1000$ & $4.14$ & $\mathbf{-0.06}$ & $+83.49$ & $+86.18$ & $+62.24$ & $+63.6$ & $+237.6$ & $+216.79$ \\ 
- & $5000$ & $\mathbf{20.4}$ & $+0.04$ & $+117.17$ & $+123.5$ & $+242.37$ & $+243.31$ & $+841.63$ & $+890.69$ \\ 
- & $10000$ & $\mathbf{29.55}$ & $+0.7$ & $+152.91$ & $+162.72$ & $+301.81$ & $+305.54$ & $+864.31$ & $+915.2$ \\ 
- & $25000$ & $\mathbf{131.49}$ & $+0.02$ & $+229.38$ & $+241.59$ & $+369.18$ & $+381.36$ & $+1070.32$ & $+1133.69$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $1.85$ & $\mathbf{-0.73}$ & $+73.92$ & $+76.03$ & $+0.86$ & $+0.17$ & $+79.92$ & $+63.57$ \\ 
+ & $1000$ & $\mathbf{3.9}$ & $+0.15$ & $+77.48$ & $+81.23$ & $+33.02$ & $+33.57$ & $+160.43$ & $+145.98$ \\ 
+ & $5000$ & $\mathbf{29.8}$ & $+0.84$ & $+88.23$ & $+96.71$ & $+160$ & $+162.28$ & $+481.91$ & $+510.71$ \\ 
+ & $10000$ & $\mathbf{45.94}$ & $+0.69$ & $+109.75$ & $+120.04$ & $+195.68$ & $+197.69$ & $+487.6$ & $+511.93$ \\ 
+ & $25000$ & $\mathbf{174.32}$ & $+0.21$ & $+151.07$ & $+159.04$ & $+243.77$ & $+248.81$ & $+609.44$ & $+648.46$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $0.86$ & $+0.73$ & $+84.09$ & $+87.69$ & $\mathbf{-6.44}$ & $-5.57$ & $+68.35$ & $+60.44$ \\ 
- & $1000$ & $\mathbf{1.93}$ & $+1.88$ & $+84.55$ & $+91.84$ & $+43.81$ & $+46.67$ & $+179.17$ & $+171.92$ \\ 
- & $5000$ & $\mathbf{9.75}$ & $+5.75$ & $+100.6$ & $+119.71$ & $+113.99$ & $+124.62$ & $+415.25$ & $+457.62$ \\ 
- & $10000$ & $\mathbf{21.53}$ & $+9.16$ & $+130.9$ & $+148.52$ & $+165.53$ & $+189.69$ & $+531.18$ & $+646.68$ \\ 
- & $25000$ & $\mathbf{45.07}$ & $+17.15$ & $+156.22$ & $+216.87$ & $+189.19$ & $+226.07$ & $+494.71$ & $+610.46$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $0.86$ & $+0.72$ & $+63.65$ & $+67.45$ & $\mathbf{-16.1}$ & $-15.41$ & $+35.63$ & $+29.41$ \\ 
+ & $1000$ & $\mathbf{1.92}$ & $+1.64$ & $+64.51$ & $+71.46$ & $+15.13$ & $+17.07$ & $+95.07$ & $+90.72$ \\ 
+ & $5000$ & $\mathbf{12.31}$ & $+6.15$ & $+76.65$ & $+94.2$ & $+59.04$ & $+66.99$ & $+216.7$ & $+243.13$ \\ 
+ & $10000$ & $\mathbf{29.75}$ & $+8.55$ & $+97.28$ & $+115.37$ & $+102.47$ & $+117.45$ & $+302.93$ & $+363.17$ \\ 
+ & $25000$ & $\mathbf{64.4}$ & $+15.75$ & $+128.34$ & $+175.78$ & $+126.59$ & $+148.78$ & $+286.31$ & $+349.43$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $1.42$ & $+0.52$ & $+0.81$ & $+2.29$ & $-29.6$ & $-30.07$ & $-28.8$ & $\mathbf{-34.08}$ \\ 
- & $1000$ & $3.01$ & $+1.36$ & $+0.25$ & $+2.67$ & $-23.24$ & $-22.86$ & $-22.47$ & $\mathbf{-26.95}$ \\ 
- & $5000$ & $\mathbf{25.53}$ & $+1.75$ & $+0.43$ & $+2.59$ & $+27.13$ & $+29.64$ & $+28.85$ & $+28.15$ \\ 
- & $10000$ & $\mathbf{75.15}$ & $+4.07$ & $+1.87$ & $+4.69$ & $+46.76$ & $+50.17$ & $+48.64$ & $+50.95$ \\ 
- & $25000$ & $\mathbf{107.52}$ & $+6.67$ & $+7.56$ & $+10.9$ & $+41.97$ & $+46.52$ & $+43.77$ & $+48.61$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $1.46$ & $+0.35$ & $+1.22$ & $+2.47$ & $-29.92$ & $-30.42$ & $-28.84$ & $\mathbf{-34.57}$ \\ 
+ & $1000$ & $3.09$ & $+1.45$ & $+1.14$ & $+3.28$ & $-23.32$ & $-22.94$ & $-22.17$ & $\mathbf{-26.89}$ \\ 
+ & $5000$ & $\mathbf{25.81}$ & $+1.79$ & $+1.09$ & $+3.26$ & $+26.02$ & $+28.55$ & $+28.61$ & $+27.43$ \\ 
+ & $10000$ & $\mathbf{74.81}$ & $+3.78$ & $+2.48$ & $+5.38$ & $+45.86$ & $+49.36$ & $+48.77$ & $+51.06$ \\ 
+ & $25000$ & $\mathbf{107.6}$ & $+6.67$ & $+8.56$ & $+12.07$ & $+44.39$ & $+48.88$ & $+47.68$ & $+52.96$ \\ 
