--- a/macros.tex
+++ b/macros.tex
@@ -43,7 +43,7 @@
 \newcommand{\ExpHybrid}{T_{\text{Hybrid}}}
 
 %Flow Variants
-\newcommand{\FlowVariant}[4]{$(#1\text{Flow},#2\text{CHE},#3\text{MBMC},#4\text{FM})$}
+\newcommand{\FlowVariant}[4]{(#1\text{F},#2\text{C},#3\text{M},#4\text{FM})}
 
 \newcounter{todocount}
 \setcounter{todocount}{1}
