--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -27,7 +27,9 @@
 
 % Unterstützung für Sätze und Definitionen
 \usepackage{amsthm}
-\usepackage{booktabs}
+\usepackage{booktabs} %for top, middle and bottomline
+\usepackage{bigstrut}
+    \setlength\bigstrutjot{3pt}
 
 \newtheorem{Satz}{Satz}[section]
 \newtheorem{Definition}[Satz]{Definition}
