--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -6,7 +6,7 @@
 
 \begin{figure}
 \centering
-\input{experiments/node_edge_distribution.tex} %
+\input{experiments/flow_network/node_edge_distribution.tex} %
 \caption{Comparison of the number of nodes and edges of the resulting flow graph 
          for flow problems with size $|V'| = 25000$ for the different flow networks and
          instance types.}
@@ -18,7 +18,7 @@
 
 \begin{figure}
 \centering
-\input{experiments/speed_up_flow_network.tex} %
+\input{experiments/flow_network/speed_up_flow_network.tex} %
 \caption{Speed up of our flow algorithms and networks relative to \EdmondKarp~on
          $\ExpLawler$ for different instance sizes and types. The red dashed line indicates the
          $($\EdmondKarp$,\ExpLawler)$ implementation and the blue dashed line
@@ -33,12 +33,12 @@
 \centering
 \begin{tabular}{lr|*{4}{r@{\hspace{3mm}}}|*{4}{r@{\hspace{3mm}}}}
 \toprule
- \multirow{2}{*}{\rotatebox{90}{\footnotesize{Instance}}} & \quad\quad & \multicolumn{4}{c}{\GoldbergTarjan} & \multicolumn{4}{c}{\EdmondKarp} \\
+ \multirow{2}{*}{\rotatebox{90}{\footnotesize{Instance}}} & \quad\quad & \multicolumn{4}{c|}{\GoldbergTarjan} & \multicolumn{4}{c}{\EdmondKarp} \\
 \cmidrule{3-10}
  &  & $\ExpHybrid$ & $\ExpEdgeSize$ & $\ExpNodeDegree$ & $\ExpLawler$ & $\ExpHybrid$ & $\ExpEdgeSize$ & $\ExpNodeDegree$ & $\ExpLawler$ \\
  & $|V'|$ &  \tiny{$t[ms]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$}
 \\\midrule%
-\csname @@input\endcsname experiments/flow_network_max_flow_summary_table.tex 
+\csname @@input\endcsname experiments/flow_network/flow_network_max_flow_summary_table.tex 
 \bottomrule
 \end{tabular}
 \caption{Running time comparison of maximum flow algorithms on different flow networks.
@@ -53,7 +53,7 @@
 
 \begin{enumerate}
 \item For $k = 2$ on the benchmark subset and $\alpha = \{1,2,4,8,16\}$ test variants:\\
-($\text{MBMC} = $ \emph{most balanced minimum cut}, $\text{CHE} = $ \emph{cut border hyperededges})
+($\text{F} = $ \emph{flow}, $\text{M} = $ \emph{most balanced minimum cut}, $\text{C} = $ \emph{cut border hyperededges})
 \begin{enumerate}
 \item \FlowVariant{+}{-}{-}{-}
 \item \FlowVariant{+}{+}{-}{-}
@@ -61,6 +61,28 @@
 \item \FlowVariant{+}{+}{+}{+}
 \end{enumerate}
 \end{enumerate}
+
+\begin{table}
+\renewcommand{\arraystretch}{1.15}
+\centering
+\begin{tabular}{|r||c|c||c|c||c|c|}
+\toprule
+ Variant & \multicolumn{2}{c||}{\FlowVariant{+}{-}{-}{-}} & \multicolumn{2}{c||}{\FlowVariant{+}{+}{-}{-}}  & \multicolumn{2}{c|}{\FlowVariant{+}{-}{+}{-}} \\
+\midrule
+$\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
+\midrule%
+\csname @@input\endcsname experiments/flow_alpha/flow_alpha_table1.tex 
+\cmidrule[1.25pt]{1-5}%
+ Variant & \multicolumn{2}{c||}{\FlowVariant{+}{+}{+}{-}} & \multicolumn{2}{c||}{\FlowVariant{+}{+}{+}{+}} \\
+\cmidrule{1-5}
+$\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
+\cmidrule{1-5}%
+\csname @@input\endcsname experiments/flow_alpha/flow_alpha_table2.tex 
+\cmidrule{1-5}
+\end{tabular}
+\caption{ Not final experiments still running }
+\label{tbl:space}
+\end{table}
 
 \subsection{Flow Heuristics}
 
